--- a/POLLUTION/webpage/index.html
+++ b/POLLUTION/webpage/index.html
@@ -44,11 +44,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Polldentify</a>
+                <a class="navbar-brand topnav" href="#">Home</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <!---<ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="#about">About</a>
                     </li>
@@ -58,12 +58,12 @@
                     <li>
                         <a href="#contact">Contact</a>
                     </li>
-                </ul>
-                <div class="col-sm-3 col-md-3 pull-right">
+                </ul>-->
+                <!---<div class="col-sm-3 col-md-3 pull-right">
                     <form class="navbar-form" role="search">
                     <div class="input-group">
                         <input id="pac-input" class="controls" type="text" placeholder="Enter Region, City, State"> <!-- input box -->
-                        <div class="input-group-btn">
+                        <!--<div class="input-group-btn">
                             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                         </div>
                         </form>
@@ -76,14 +76,14 @@
 
 
     <!-- Header -->
-    <a name="about"></a>
+    <!--<a name="about"></a>-->
     <div class="intro-header">
-        <div class="container">
+        <!--<div class="container">
 
             <div class="row">
                 <div class="col-lg-12">
                     <div id = "mapcontainer"> <!-- GoogleMap Container-->
-                        <div id="googleMap" style="width:850px;height:500px;"></div>
+                        <!--<div id="googleMap" style="width:850px;height:500px;"></div>
                     </div>
                     <!-- <div class="intro-message"> -->
                     <!--     <h1>Landing Page</h1> -->
@@ -101,13 +101,13 @@
                     <!--         </li> -->
                     <!--     </ul> -->
                     <!-- </div> -->
-                </div>
+                <!--</div>
             </div>
 
         </div>
         <!-- /.container -->
 
-    </div>
+    <!--</div>
     <!-- /.intro-header -->
 
     <!-- Page Content -->
@@ -117,14 +117,20 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
+                <div class="col-lg-12">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <h1 style="color:black; font-size:56px">Polldentify</h1>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                <div class="col-lg-12">
+                    <form class="navbar-form" role="search">
+                    <div class="input-group" style="color:black">
+                        <input id="pac-input" class="controls" type="text" placeholder="Enter Region, City, State" style="margin:auto; width:600px; color:black;"> <!-- input box -->
+						<div class="input-group-btn" style="height:24px; width:24px">
+                            <button class="btnPage" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        </div>
+						<!-- input the javascript -->
+                        </form>
+                    </div>
                 </div>
             </div>
 
@@ -140,10 +146,8 @@
 
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h2 class="section-heading">About the Team<br></h2>
+                    <p class="lead"><! Visit their website to download some of their awesome, free photoshop actions!</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/dog.png" alt="">
@@ -156,7 +160,7 @@
     </div>
     <!-- /.content-section-b -->
 
-    <div class="content-section-a">
+    <!--<div class="content-section-a">
 
         <div class="container">
 
@@ -175,10 +179,10 @@
         </div>
         <!-- /.container -->
 
-    </div>
+    <!--</div>
     <!-- /.content-section-a -->
 
-	<a  name="contact"></a>
+	<!--a  name="contact"></a>
     <div class="banner">
 
         <div class="container">
@@ -205,7 +209,7 @@
         </div>
         <!-- /.container -->
 
-    </div>
+    <!--</div>
     <!-- /.banner -->
 
     <!-- Footer -->
@@ -213,24 +217,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#about">About</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#services">Services</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; Polldentify. All Rights Reserved</p>
                 </div>
             </div>
         </div>
