--- a/POLLUTION/webpage/index.html
+++ b/POLLUTION/webpage/index.html
@@ -50,169 +50,12 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <!---<ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#about">About</a>
-                    </li>
-                    <li>
-                        <a href="#services">Services</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>-->
-                <!---<div class="col-sm-3 col-md-3 pull-right">
-                    <form class="navbar-form" role="search">
-                    <div class="input-group">
-                        <input id="pac-input" class="controls" type="text" placeholder="Enter Region, City, State"> <!-- input box -->
-                        <!--<div class="input-group-btn">
-                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                        </div>
-                        </form>
-                    </div>
-                </div>
-            <!-- /.navbar-collapse -->
             </div>
-        <!-- /.container -->
     </nav>
 
+    <div data-ng-view></div>
 
-    <!-- Header -->
-    <!--<a name="about"></a>-->
-    <div class="intro-header">
-        <!--<div class="container">
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <div id = "mapcontainer"> <!-- GoogleMap Container-->
-                        <!--<div id="googleMap" style="width:850px;height:500px;"></div>
-                    </div>
-                    <!-- <div class="intro-message"> -->
-                    <!--     <h1>Landing Page</h1> -->
-                    <!--     <h3>A Template by Start Bootstrap</h3> -->
-                    <!--     <hr class="intro-divider"> -->
-                    <!--     <ul class="list-inline intro-social-buttons"> -->
-                    <!--         <li> -->
-                    <!--             <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a> -->
-                    <!--         </li> -->
-                    <!--         <li> -->
-                    <!--             <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a> -->
-                    <!--         </li> -->
-                    <!--         <li> -->
-                    <!--             <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a> -->
-                    <!--         </li> -->
-                    <!--     </ul> -->
-                    <!-- </div> -->
-                <!--</div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    <!--</div>
-    <!-- /.intro-header -->
-
-    <!-- Page Content -->
-
-	<a  name="services"></a>
-    <div class="content-section-a">
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="clearfix"></div>
-                    <h1 style="color:black; font-size:56px">Polldentify</h1>
-                </div>
-                <div class="col-lg-12">
-                    <form class="navbar-form" role="search">
-                    <div class="input-group" style="color:black">
-                        <input id="pac-input" class="controls" type="text" placeholder="Enter Region, City, State" style="margin:auto; width:600px; color:black;"> <!-- input box -->
-						<div class="input-group-btn" style="height:24px; width:24px">
-                            <button class="btnPage" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                        </div>
-						<!-- input the javascript -->
-                        </form>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-a -->
-
-    <div class="content-section-b">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <h2 class="section-heading">About the Team<br></h2>
-                    <p class="lead"><! Visit their website to download some of their awesome, free photoshop actions!</p>
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-b -->
-
-    <!--<div class="content-section-a">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    <!--</div>
-    <!-- /.content-section-a -->
-
-	<!--a  name="contact"></a>
-    <div class="banner">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
-                </div>
-                <div class="col-lg-6">
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    <!--</div>
-    <!-- /.banner -->
+    <!-- /.banner
 
     <!-- Footer -->
     <footer>
@@ -227,11 +70,15 @@
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"> </script>
+    <!-- <script src="http://maps.googleapis.com/maps/api/js"></script> -->
+    
     <script src="polldentify_hp.js"></script>
 
     <script src="js/dist/angular-route.min.js"></script>
+    <script src="js/dist/angular-google-maps.min.js"></script>
     <script src="js/app.js"></script>
+<!-- <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"> </script> -->
     <script src="js/controllers.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
